--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,6 @@ deployment:
   hub:
     branch: master
     commands:
-      - docker build -t $IMAGE_NAME .
+      - docker build -t $IMAGE_NAME:$CIRCLE_BUILD_NUM .
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push $IMAGE_NAME
+      - docker push $IMAGE_NAME:$CIRCLE_BUILD_NUM
